[project]
name = "quiz-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
